# gft-usher-tools

./: .gitignore  README.md  package.json  pyproject.toml  spec.md  tsconfig.json
.github/workflows/: deploy.yml
deploy/: Caddyfile  deploy.sh  gft-sync-screenings.service  gft-sync-screenings.timer  gft-sync-shifts.service  gft-sync-shifts.timer  gft-usher.service  setup.sh
gft_usher_tools/glasgowfilm_scrape/: glasgowfilm_scrape.py
gft_usher_tools/timetable/: timetable.py
src/: config.ts
src/client/: App.tsx  index.html  vite.config.ts
src/client/components/: FilterGroup.tsx  FilterGroupList.tsx  GlobalFilters.tsx  ShiftTable.tsx  TimeRangeSlider.tsx
src/client/hooks/: useShifts.ts
src/client/lib/: filters.ts
src/data/matcher/: match.ts
src/data/scraper/: api.ts
src/data/sheet/: colors.ts  download.ts  parse.ts
src/server/: db.ts  index.ts  sync-cli.ts
src/server/sync/: screenings.ts  shifts.ts
src/shared/: types.ts
tests/: test_timetable.py
